Fix sidebar not appearing on IE9, 10, 11

--- a/resources/assets/less/components/sidebar.less
+++ b/resources/assets/less/components/sidebar.less
@@ -19,7 +19,7 @@
     @media(min-width:780px){
         width: 260px;
         background-color: transparent;
-        display: initial
+        display: block
     }
 
     &::-webkit-scrollbar {
@@ -85,6 +85,6 @@
     fill: #fff;
 
     @media(max-width:780px){
-        display: initial
+        display: block
     }
 }
